--- a/testDocs/_config.yml
+++ b/testDocs/_config.yml
@@ -1,3 +1,13 @@
 theme: "just-the-docs"
 
+title: "L3: course material"
 
+
+footer_content: "All material developed by Daniel Libatique, Dominic Machado and Neel Smith, and available under the Creative Commons Attribution Share-Alike license <a href=\"https://creativecommons.org/licenses/by-sa/4.0/\">CC BY-SA 4.0 <img height=\"15\" width=\"80\" src=\"https://mirrors.creativecommons.org/presskit/buttons/80x15/png/by-sa.png\" /></a> "
+
+
+aux_links:
+  "Courses on github":
+    - "https://github.com/lingualatina/courses/"
+  "L3 home":
+    - "https://lingualatina.github.io/"
