--- a/offline/_config.yml
+++ b/offline/_config.yml
@@ -7,7 +7,7 @@ footer_content: "Material on this site includes contributions from Daniel Libati
 
 
 aux_links:
-  "Courses on github":
-    - "https://github.com/lingualatina/courses/"
+  "Textbook": 
+    - "https://lingualatina.github.io/textbook/"
   "L3 home":
     - "https://lingualatina.github.io/"
