--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ footer_content: "Material on this site includes contributions from Daniel Libati
 
 
 aux_links:
-  "Textbook": 
+  "L3 textbook": 
     - "https://lingualatina.github.io/textbook/"
   "L3 home":
     - "https://lingualatina.github.io/"
